--- a/tracking/tracking-persist-mysql/pom.xml
+++ b/tracking/tracking-persist-mysql/pom.xml
@@ -1,26 +1,65 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>uni.miskolc.ips.ilona</groupId>
-    <artifactId>tracking</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>uni.miskolc.ips.ilona</groupId>
-  <artifactId>tracking-persist-mysql</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>tracking-persist-mysql</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>uni.miskolc.ips.ilona</groupId>
+		<artifactId>tracking</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>uni.miskolc.ips.ilona</groupId>
+	<artifactId>tracking-persist-mysql</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>tracking-persist-mysql</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<junit.version>4.12</junit.version>
+		<mybatis.version>3.3.0</mybatis.version>
+		<mysql.connector.version>5.1.6</mysql.connector.version>
+		<tracking.persist.version>0.0.1-SNAPSHOT</tracking.persist.version>
+		<log4j.version>2.5</log4j.version>
+	</properties>
+	<dependencies>
+	
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- Database dependencies -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysql.connector.version}</version>
+		</dependency>
+		
+		<!-- Ilona dependencies -->
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>tracking-persist</artifactId>
+			<version>${tracking.persist.version}</version>
+		</dependency>
+		
+		<!-- Logging dependencies -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+	</dependencies>
 </project>
