--- a/ilona/src/main/webapp/WEB-INF/web.xml
+++ b/ilona/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,10 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee 
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	version="3.1">
 
-<web-app>
+	<!-- <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 
+		2.3//EN" "http://java.sun.com/dtd/web-app_2_3.dtd" > -->
 	<display-name>Archetype Created Web Application</display-name>
 
 	<context-param>
@@ -10,11 +12,21 @@
 		<param-value>
 			/WEB-INF/applicationContext.xml
 			/WEB-INF/dispatcher-servlet.xml
-			
+			/WEB-INF/security-config.xml
 		</param-value>
 	</context-param>
-  
-	
+
+	<!-- Spring security filter chain -->
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 
 	<!-- Root context: applicationContext.xml -->
 	<listener>
