--- a/ilona/pom.xml
+++ b/ilona/pom.xml
@@ -9,7 +9,8 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<spring.version>4.3.1.RELEASE</spring.version>
-		<spring.security.version>4.1.0.RELEASE</spring.security.version>
+		<spring.security.version>4.1.1.RELEASE</spring.security.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -21,8 +22,8 @@
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>3.0-alpha-1</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -128,6 +129,10 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<!-- 
+					<encoding>${project.build.sourceEncoding}</encoding>
+					 -->
 				</configuration>
 			</plugin>
 		</plugins>
