--- a/tracking/tracking-controller/pom.xml
+++ b/tracking/tracking-controller/pom.xml
@@ -15,11 +15,14 @@
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.1.3.RELEASE</spring.version>
-		<spring.security.version>4.1.0.BUILD-SNAPSHOT</spring.security.version>
-		<jackson.version>2.5.1</jackson.version>
+		<spring.version>4.3.1.RELEASE</spring.version>
+		<spring.security.version>4.1.1.RELEASE</spring.security.version>
+		<jackson.version>2.8.0</jackson.version>
 		<junit.version>4.12</junit.version>
 		<log4j.version>2.5</log4j.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
 	</properties>
 	<dependencies>
 
@@ -30,7 +33,7 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Ilona dependencies -->
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
@@ -47,7 +50,7 @@
 			<artifactId>tracking-util</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- Spring Dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -74,7 +77,7 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>${spring.security.version}</version>
 		</dependency>
-		
+
 		<!-- JSON Parser dependencies -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -86,7 +89,7 @@
 			<artifactId>jackson-core</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
-		
+
 		<!-- Logging dependencies -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -98,6 +101,35 @@
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		
+
 	</dependencies>
+
+	<build>
+		<plugins>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<outputEncoding>UTF-8</outputEncoding>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<!-- <encoding>${project.build.sourceEncoding}</encoding> -->
+				</configuration>
+			</plugin>
+		</plugins>
+
+		<finalName>ilona</finalName>
+	</build>
+
 </project>
