Mybatis mapper had been corrected for resulting List of Maps with the selectWiFiRSSIOfMeasurement. The WifiRSSI class has a new constructor for the map list from mybatis. The RFIDTags class are changed to not storing the 0 values of the method of block storage in mysql. The MeasurementDao's method readMeasurements call the mapper methods in order to build a valid Measurement, because the mybatis is not capable of create entries of a hashmap.

--- a/ilona/pom.xml
+++ b/ilona/pom.xml
@@ -21,12 +21,17 @@
 			<version>2.5</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- <dependency> <groupId>javax.servlet</groupId> <artifactId>jstl</artifactId> 
+			<version>1.2</version> <scope>provided</scope> </dependency> -->
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<artifactId>servlet-api</artifactId>
+			<version>3.0-alpha-1</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
@@ -49,8 +54,31 @@
 			<artifactId>measurement-service-impl</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-service-impl</artifactId>
+			<version>0.1.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-controller</artifactId>
+			<version>0.1.2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+
+
 	<build>
+		<plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.5.1</version>
+			<configuration>
+				<source>1.7</source>
+				<target>1.7</target>
+			</configuration>
+		</plugin>
+	</plugins>
 		<finalName>ilona</finalName>
 	</build>
 </project>
