Wrongcommit,revert discard local changes. Dispatcher-servlet had been expanded with positioning controller.A revert discarded all notcommited changes, the positioning files had been recharged from a zip file. the knn positioning interface with two method, simple and weighted knn are implemented. neighbour, neighbourcomparator utility class had been created. NeuralNetwork class and positioning class had been created. The weka dependency had been writed in the pom.xmlfile.

--- a/positioning/positioning-service-impl/pom.xml
+++ b/positioning/positioning-service-impl/pom.xml
@@ -38,5 +38,17 @@
 			<artifactId>measurement-service</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.4</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.ac.waikato.cms.moa</groupId>
+			<artifactId>weka-package</artifactId>
+			<version>2016.04</version>
+		</dependency>
+
 	</dependencies>
 </project>
