--- a/positioning/positioning-service-impl/pom.xml
+++ b/positioning/positioning-service-impl/pom.xml
@@ -49,6 +49,18 @@
 			<artifactId>weka-package</artifactId>
 			<version>2016.04</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20160212</version>
+</dependency>
+
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.8.1</version>
+</dependency>
 
 	</dependencies>
 </project>
