navigation module has been configured to use the proper dependencies

--- a/navigation/pom.xml
+++ b/navigation/pom.xml
@@ -18,6 +18,7 @@
   	<module>navigation-controller</module>
   	
   	<module>navigation-service</module>
+  	<module>navigation-persist-ontology</module>
   </modules>
   
   <build>
