--- a/navigation/navigation-service-impl/pom.xml
+++ b/navigation/navigation-service-impl/pom.xml
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -31,6 +31,11 @@
     	<groupId>uni.miskolc.ips.ilona</groupId>
     	<artifactId>navigation-persist</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>uni.miskolc.ips.ilona</groupId>
+    	<artifactId>measurement-persist</artifactId>
+    	<version>0.1.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
