--- a/measurement/measurement-controller/pom.xml
+++ b/measurement/measurement-controller/pom.xml
@@ -31,11 +31,11 @@
 			<artifactId>measurement-service</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-model</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- Spring Dependencies -->
 		<dependency>
