--- a/ilona/src/main/webapp/WEB-INF/web.xml
+++ b/ilona/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,31 @@
 		</param-value>
 	</context-param>
 
+	<!-- Encoding filter for UTF-8 datatransfer-->
+	<filter>
+		<filter-name>encodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>false</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>encodingFilter</filter-name>
+		<url-pattern>/**</url-pattern>
+	</filter-mapping>
+
+
+	<listener>
+    	<listener-class>
+      		org.springframework.security.web.session.HttpSessionEventPublisher
+    	</listener-class>
+	</listener>
+
 	<!-- Spring security filter chain -->
 
 	<filter>
@@ -23,7 +48,7 @@
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/**</url-pattern>
 	</filter-mapping>
 
 	<!-- Root context: applicationContext.xml -->
@@ -41,45 +66,20 @@
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-
+	
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+	<!-- 
 	<jsp-config>
 		<jsp-property-group>
 			<url-pattern>*.jsp</url-pattern>
 			<page-encoding>UTF-8</page-encoding>
 		</jsp-property-group>
 	</jsp-config>
-
-<!--  
-	<filter>
-		<filter-name>CharsetFilter</filter-name>
-		<filter-class>security.CharsetFilter</filter-class>
-		<init-param>
-			<param-name>requestEncoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>CharsetFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-
-
-	<filter>
-		<filter-name>encodingFilter</filter-name>
-		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-		<init-param>
-			<param-name>encoding</param-name>
-			<param-value>UTF-8</param-value>
-		</init-param>
-		<init-param>
-			<param-name>forceEncoding</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
--->
+ 	-->
+	<!-- <filter> <filter-name>CharsetFilter</filter-name> <filter-class>security.CharsetFilter</filter-class> 
+		<init-param> <param-name>requestEncoding</param-name> <param-value>UTF-8</param-value> 
+		</init-param> </filter> <filter-mapping> <filter-name>CharsetFilter</filter-name> 
+		<url-pattern>/*</url-pattern> </filter-mapping> -->
 </web-app>
