--- a/ilona/src/main/webapp/WEB-INF/web.xml
+++ b/ilona/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 	</filter>
 	<filter-mapping>
 		<filter-name>encodingFilter</filter-name>
-		<url-pattern>/**</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 
@@ -48,7 +48,7 @@
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/**</url-pattern>
+		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
 	<!-- Root context: applicationContext.xml -->
