Tracking admin page improvements
- signup page finished
- login page db nullpointer error fixed
- gitignore update
- list users: list, delete, modify
- list user devices: list, modify, delete

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ local.properties
 .classpath
 .settings/
 .loadpath
-
+*.log
 # Locally stored "Eclipse launch configurations"
 *.launch
 .springBeans
