--- a/navigation/navigation-controller/pom.xml
+++ b/navigation/navigation-controller/pom.xml
@@ -29,7 +29,11 @@
 			<artifactId>navigation-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
+			<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>4.0.0-b01</version>
+		</dependency>
 		<!-- Spring Dependencies -->
 		<dependency>
 			<groupId>org.springframework</groupId>
