--- a/navigation/navigation-service/pom.xml
+++ b/navigation/navigation-service/pom.xml
@@ -19,12 +19,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>uni.miskolc.ips.ilona</groupId>
     	<artifactId>navigation-model</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>uni.miskolc.ips.ilona</groupId>
+    	<artifactId>measurement-model</artifactId>
+    	<version>0.1.1-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>uni.miskolc.ips.ilona</groupId>
+    	<artifactId>navigation-persist</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
