--- a/tracking/tracking-controller/pom.xml
+++ b/tracking/tracking-controller/pom.xml
@@ -54,6 +54,11 @@
 		</dependency>
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>tracking-persist</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-util</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
