--- a/ilona/src/main/webapp/WEB-INF/web.xml
+++ b/ilona/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,7 @@
 			/WEB-INF/applicationContext.xml
 			/WEB-INF/dispatcher-servlet.xml
 			/WEB-INF/security-config.xml
+			/WEB-INF/tracking-context.xml
 		</param-value>
 	</context-param>
 
