--- a/navigation/navigation-controller/pom.xml
+++ b/navigation/navigation-controller/pom.xml
@@ -67,6 +67,12 @@
 			<artifactId>jackson-core</artifactId>
 			<version>${jackson.version}</version>
 		</dependency>
+		
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+        <version>1.8.5</version>
+    </dependency>
 
 	</dependencies>
 </project>
