Tracking user function updates and other polishes
- updated user account management page
- updated user create device page
- updated device details, sql
- login page improvements
- signup page improvements
- fixed exception handling in DAOs
- updated password recovery, password gen and dao
- updated entry controller
- updated device validation, device createin page restrictions

--- a/tracking/tracking-service-impl/pom.xml
+++ b/tracking/tracking-service-impl/pom.xml
@@ -18,6 +18,7 @@
 		<junit.version>4.12</junit.version>
 		<tracking.service.version>0.0.1-SNAPSHOT</tracking.service.version>
 		<tracking.persist.version>0.0.1-SNAPSHOT</tracking.persist.version>
+		<log4j.version>2.5</log4j.version>
 	</properties>
 	<dependencies>
 		
@@ -39,6 +40,18 @@
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-persist</artifactId>
 			<version>${tracking.persist.version}</version>
+		</dependency>
+		
+		<!-- Logging dependencies -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 </project>
