--- a/tracking/tracking-persist-mysql/pom.xml
+++ b/tracking/tracking-persist-mysql/pom.xml
@@ -19,6 +19,8 @@
 		<mybatis.version>3.4.1</mybatis.version>
 		<mysql.connector.version>5.1.6</mysql.connector.version>
 		<tracking.persist.version>0.0.1-SNAPSHOT</tracking.persist.version>
+		<spring.version>4.3.1.RELEASE</spring.version>
+		<spring.security.version>4.1.1.RELEASE</spring.security.version>
 		<log4j.version>2.5</log4j.version>
 	</properties>
 	<dependencies>
@@ -48,7 +50,7 @@
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-persist</artifactId>
 			<version>${tracking.persist.version}</version>
-		</dependency>		
+		</dependency>
 
 		<!-- Logging dependencies -->
 		<dependency>
@@ -61,5 +63,29 @@
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
+
+		<!-- Spring dependencies -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
 	</dependencies>
 </project>
