positioning - deployment has been configured

--- a/measurement/pom.xml
+++ b/measurement/pom.xml
@@ -65,7 +65,7 @@
 
 
 	<scm>
-		<url>https://jerry.iit.uni-miskolc.hu/svntzs/ips</url>
+		<url>https://github.com/ZsoltToth/ilona.git</url>
 	</scm>
 
 </project>
