--- a/positioning/pom.xml
+++ b/positioning/pom.xml
@@ -7,6 +7,41 @@
 	<version>0.1.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>ILONA - Positioning Subsystem</name>
+
+	<properties>
+		<java.version>1.7</java.version>
+	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.2</version>
+					<configuration>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.1</version>
+					<executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>deploy</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<modules>
 		<module>positioning-util</module>
 		<module>positioning-model</module>
@@ -19,13 +54,16 @@
 
 	<distributionManagement>
 		<snapshotRepository>
-			<id>playground6.iit.uni-miskolc.hu</id>
-			<name>playground6.iit.uni-miskolc.hu-snapshots</name>
-			<url>http://playground6.iit.uni-miskolc.hu:8081/artifactory/libs-snapshot-local</url>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Releases</url>
+		</repository>
 	</distributionManagement>
 
 	<scm>
-		<url>https://jerry.iit.uni-miskolc.hu/svntzs/ips</url>
+		<url>https://github.com/ZsoltToth/ilona.git</url>
 	</scm>
 </project>
