--- a/navigation/pom.xml
+++ b/navigation/pom.xml
@@ -1,27 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>uni.miskolc.ips.ilona</groupId>
-  <artifactId>navigation</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>ILONA - Navigation</name>
-  <description>	</description>
-  <modules>
-  	<module>navigation-model</module>
-  	
-  	<module>navigation-persist</module>
-  	<module>navigation-persist-mysql</module>
-  	
-  	<module>navigation-service-impl</module>
-  	<module>navigation-util</module>
-  	
-  	<module>navigation-controller</module>
-  	
-  	<module>navigation-service</module>
-  	<module>navigation-persist-ontology</module>
-  </modules>
-  
-  <build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>uni.miskolc.ips.ilona</groupId>
+	<artifactId>navigation</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>ILONA - Navigation</name>
+	<description>	</description>
+
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+
+	<modules>
+		<module>navigation-model</module>
+		<module>navigation-persist</module>
+		<module>navigation-service-impl</module>
+		<module>navigation-util</module>
+		<module>navigation-controller</module>
+		<module>navigation-service</module>
+		<module>navigation-persist-ontology</module>
+	</modules>
+
+	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -29,23 +30,40 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.5.1</version>
 					<configuration>
-						<source>1.8</source>
-						<target>1.8</target>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
+				</plugin>
+
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.1</version>
+					<executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>deploy</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
-	
+
 	<distributionManagement>
 		<snapshotRepository>
-			<id>playground6.iit.uni-miskolc.hu</id>
-			<name>playground6.iit.uni-miskolc.hu-snapshots</name>
-			<url>http://playground6.iit.uni-miskolc.hu:8081/artifactory/libs-snapshot-local</url>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Snapshots</url>
 		</snapshotRepository>
+		<repository>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Releases</url>
+		</repository>
 	</distributionManagement>
 
 	<scm>
-		<url>https://jerry.iit.uni-miskolc.hu/svntzs/ips</url>
+		<url>https://github.com/ZsoltToth/ilona.git</url>
 	</scm>
 </project>
