--- a/tracking/pom.xml
+++ b/tracking/pom.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>uni.miskolc.ips.ilona</groupId>
-  <artifactId>tracking</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>ILONA - Tracking</name>
-  
-  <build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>uni.miskolc.ips.ilona</groupId>
+	<artifactId>tracking</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>ILONA - Tracking</name>
+
+	<properties>
+		<java.version>1.7</java.version>
+	</properties>
+
+	<build>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -15,26 +20,28 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.2</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
-						<encoding>UTF-8</encoding>
+						<source>${java.version}</source>
+						<target>${java.version}</target>
 					</configuration>
+				</plugin>
+
+				<plugin>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>2.8.1</version>
+					<executions>
+						<execution>
+							<id>default-deploy</id>
+							<phase>deploy</phase>
+							<goals>
+								<goal>deploy</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
-	
-	<distributionManagement>
-		<snapshotRepository>
-			<id>playground6.iit.uni-miskolc.hu</id>
-			<name>playground6.iit.uni-miskolc.hu-snapshots</name>
-			<url>http://playground6.iit.uni-miskolc.hu:8081/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
 
-	<scm>
-		<url>https://jerry.iit.uni-miskolc.hu/svntzs/ips</url>
-	</scm>
 	<modules>
 		<module>tracking-controller</module>
 		<module>tracking-model</module>
@@ -43,5 +50,20 @@
 		<module>tracking-service</module>
 		<module>tracking-service-impl</module>
 		<module>tracking-util</module>
-  </modules>
+	</modules>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>safranek</id>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Releases</url>
+		</repository>
+	</distributionManagement>
+
+	<scm>
+		<url>https://github.com/ZsoltToth/ilona.git</url>
+	</scm>
 </project>
