--- a/navigation/navigation-service-impl/pom.xml
+++ b/navigation/navigation-service-impl/pom.xml
@@ -54,4 +54,59 @@
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*IntegrationTest.java</exclude>
+					</excludes>
+
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>integration-test</phase>
+						<configuration>
+							<systemPropertyVariables>
+								<database.host>${database.host}</database.host>
+								<database.port>${database.port}</database.port>
+								<database.db>${database.db}</database.db>
+								<database.user>${database.user}</database.user>
+								<database.password>${database.password}</database.password>
+							</systemPropertyVariables>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+							<includes>
+								<include>**/*IntegrationTest.java</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>mysqlTemplate</id>
+			<properties>
+				<database.host>localhost</database.host>
+				<database.port>3306</database.port>
+				<database.db>Ilona</database.db>
+				<database.user>ilona</database.user>
+				<database.password>ilona</database.password>
+			</properties>
+		</profile>
+	</profiles>
 </project>
