pom has been modified safranek repo has been added

--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
 			<name>Spring Snapshot Repository</name>
 			<url>http://repo.spring.io/snapshot</url>
 		</repository>
+		<repository>
+			<id>safranek</id>
+			<name>ILONA - Snapshot</name>
+			<url>http://safranek.iit.uni-miskolc.hu:8081/nexus/content/repositories/ILONA-Snapshots/</url>
+		</repository>
 	</repositories>
 
 
