--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,12 @@
 		<param-value>
 			/WEB-INF/dispatcher-servlet.xml
 			/WEB-INF/applicationContext.xml
-			/WEB-INF/security-config.xml
-			/WEB-INF/tracking-context.xml
+			<!--  /WEB-INF/security-config.xml
+			/WEB-INF/tracking-context.xml-->
 		</param-value>
 	</context-param>
 
-	<!-- Encoding filter for UTF-8 datatransfer-->
+	<!-- Encoding filter for UTF-8 datatransfer
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -38,9 +38,9 @@
     	<listener-class>
       		org.springframework.security.web.session.HttpSessionEventPublisher
     	</listener-class>
-	</listener>
+	</listener>-->
 
-	<!-- Spring security filter chain -->
+	<!-- Spring security filter chain 
 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -49,7 +49,7 @@
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping>
+	</filter-mapping>-->
 
 	<!-- Root context: applicationContext.xml -->
 	<listener>
